hotfix: fix alignment on 1280px

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,11 +11,12 @@
     margin: auto;
 }
 
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 768px) {
     .profile__add-button {
         padding: 14px 64px;
         max-width: 420px;
         width: 100%;
+        margin: 36px 0;
     }
 }
 
@@ -23,7 +24,6 @@
     .profile__add-button {
         max-width: none;
         padding: 14px 0;
-        margin: 36px 0;
         background-size: 16px 16px;
     }
 }
