--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -3,5 +3,10 @@
     margin: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+}
+
+@media screen and (max-width: 320px) {
+    .profile__container {
+        justify-content: space-between;
+    }
 }
