--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -17,16 +17,11 @@
     align-items: center;
 }
 
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 768px) {
     .profile {
         grid-template-columns: 1fr;
         justify-items: center;
         text-align: center;
-    }
-}
-
-@media screen and (max-width: 825px) {
-    .profile {
         padding: 0 19px;
     }
 }
